--- a/views/get_number.erb
+++ b/views/get_number.erb
@@ -2,6 +2,8 @@ Hello <%=name%>.<br>
 I have a number between 1 and 100.<br>
 Do you think you can guess what it is in 10 tries?
 <br><br><br>
+Your last guess of <%=guess%> <%=results%><br>
+You have <%=rounds%> guesses left
 Enter your guess
 
 <form method = "post" action ="/guess">
