--- a/views/get_name.erb
+++ b/views/get_name.erb
@@ -1,4 +1,4 @@
-Hello, please enter your name.
+Welcome, please enter your name.
 
 <form method = "post" action ="/users_name">
     <input type = "text" name = "user_name" autofocus>
