--- a/views/get_name.erb
+++ b/views/get_name.erb
@@ -1,6 +1,16 @@
-Welcome, please enter your name.
+<center>
+<strong>Welcome, please enter your name.
+</strong> </center>
 
+
+<center>
+    <img class="sizeimage" align="middle" src="/img/numbers.jpeg">
+      </img>
+</center>
+
+<center>
 <form method = "post" action ="/users_name">
     <input type = "text" name = "user_name" autofocus>
     <input type = "submit">
 </form>
+</center>
