Added more style

--- a/views/get_number.erb
+++ b/views/get_number.erb
@@ -4,9 +4,11 @@
 <br><br><br>
 
 <center>
-    <img class="sizeimage" align="middle" src="/img/10.jpg">
-      </img>
-</center>
+
+<center><img src="/img/10.jpg"; 
+style="height:15rem; width:25rem;"/></center>
+
+   
 
 
 <center><strong>Your last guess was: <%=guess%> <%=results%></strong></center><br>
