--- a/views/get_name.erb
+++ b/views/get_name.erb
@@ -1,12 +1,13 @@
 <center>
-<strong>Welcome, please enter your name.
+<strong>Welcome, to the <em>"GUESS NUMBER GAME"</em>, please enter your name.
 </strong> </center>
 
 
-<center>
-    <img class="sizeimage" align="middle" src="/img/numbers.jpeg">
-      </img>
-</center>
+<center><img src="/img/numbers.jpeg"; 
+style="height:15rem; width:25rem;"/></center>
+
+
+
 
 <center>
 <form method = "post" action ="/users_name">
