--- a/views/play_again.erb
+++ b/views/play_again.erb
@@ -1,8 +1,17 @@
  "<%=name%> your guess, <%=guess%> was correct"
-
+<center>
 "Do you want to play again? Y/N"
+</center>
+
+<center><img src="/img/hun.jpeg"; 
+style="height:15rem; width:25rem;"/></center>
+
+<center>
+
  <form method ="post" action ="/play_again">
     <input type ="text" name ="playagain" style ="text_transform:uppercase" autofocus>
     <input type = "text" name = "user_name" value = <%=name%> hidden>
     <input type = "submit">
 </form>
+
+</center>
