--- a/views/get_name.erb
+++ b/views/get_name.erb
@@ -3,9 +3,9 @@
 </strong> </center>
 
 
-<center><img src="/img/numbers.jpeg"; 
-style="height:15rem; width:25rem;"/></center>
 
+<center><img src="/img/10.jpg"; 
+style="height:15rem; width:25rem; border: 6px solid #4682b4;"/></center>
 
 
 
