--- a/views/get_number.erb
+++ b/views/get_number.erb
@@ -1,13 +1,12 @@
-<center> Hello <%=name%>.</center><br>
-<center>I have a number between 1 and 100.</center><br>
+<center> Hello <%=name%>, I have a number between <em>1 and 100</em>.</center><br>
 <center>Do you think you can guess what it is in 10 tries?</center>
-<br><br><br>
+<br><br>
 
 <center>
 
-<center><img src="/img/10.jpg"; 
-style="height:15rem; width:25rem;"/></center>
 
+<center><img src="/img/hun.jpeg"; 
+style="height:15rem; width:25rem; border: 6px solid #4682b4;"/></center>
    
 
 
