--- a/views/play_again.erb
+++ b/views/play_again.erb
@@ -1,10 +1,11 @@
- "<%=name%> your guess, <%=guess%> was correct"
+
+<center><strong> "Congratulations <%=name%> your guess, <%=guess%> was <em>correct</em>" </strong></center>
 <center>
 "Do you want to play again? Y/N"
 </center>
 
-<center><img src="/img/hun.jpeg"; 
-style="height:15rem; width:25rem;"/></center>
+<center><img src="/img/celebrate.jpg"; 
+style="height:15rem; width:25rem; border: 6px solid #4682b4;"/></center>
 
 <center>
 
