archiving before changing

--- a/views/sorry.erb
+++ b/views/sorry.erb
@@ -14,7 +14,7 @@ style="height:15rem; width:25rem; border: 6px solid #4682b4;"/></center>
     <!--input type ="text" name ="playagain" style ="text_transform:uppercase" autofocus/>
     <input type = "text" name = "user_name" value = <%=name%> hidden/>
     <input type = "submit" class = "continue" value = like  -->
-    <button type="submit" class="CONTINUE" name="foo" value="bar">CONTINUE</button>
+    <!--button type="submit" class="CONTINUE" name="foo" value="bar">CONTINUE</button> -->
 </form>
 
 </center>
