--- a/views/sorry.erb
+++ b/views/sorry.erb
@@ -10,11 +10,9 @@ style="height:15rem; width:25rem; border: 6px solid #4682b4;"/></center>
 
 <center>
 
- <form method ="post" action ="/play_again">
-    <!--input type ="text" name ="playagain" style ="text_transform:uppercase" autofocus/>
-    <input type = "text" name = "user_name" value = <%=name%> hidden/>
-    <input type = "submit" class = "continue" value = like  -->
-    <!--button type="submit" class="CONTINUE" name="foo" value="bar">CONTINUE</button> -->
+<form method = "post" action ="/continue">
+    <input type = "text" name = "continue" autofocus>
+    <input type = "submit">
 </form>
 
 </center>
