--- a/views/thank_you.erb
+++ b/views/thank_you.erb
@@ -4,5 +4,6 @@
 </center>
 
 <center><img src="/img/thankyou.jpg"; 
-style="height:15rem; width:25rem;"/></center>
+style="height:20rem; width:30rem;border: 8px solid #4682b4;"/></center>
 
+ 
