updated correct guess erb

--- a/views/sorry.erb
+++ b/views/sorry.erb
@@ -11,8 +11,11 @@ style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center>
 <center>
 
 <form method = "post" action ="/continue">
-    <input type = "text" name = "continue" autofocus>
-    <input type = "submit">
+    <!--input type = "text" name = "continue" autofocus>
+    <input type = "submit"-->
+    continue <br>
+    <button name= "continue" type = "submit" value="continue">CONTINUE</button>
+    <!--button name= "continue" type = "submit" value="No">2</button-->
 </form>
 
 </center>
