--- a/views/correct_guess.erb
+++ b/views/correct_guess.erb
@@ -21,11 +21,16 @@ style="height:20rem; width:30rem; border: 8px solid #4682b4;"/></center>
 recieved from: (Lotfi Bechouck, John Carr and Ysabelle Bombardier)<br>
 Directed and Supervised by:<a href="http://www.minedminds.org/">Mined Minds</a> </p>
 
-
 <form playchoice = "playchoice_form" class = "form_box" method = "post" action = "/playchoice">
+<!--form playchoice = action="action_page.php" method ="get"/playchoice">
 	<input type="text" name="input_playchoice">
     <input type="hidden" name = "user_name" value = "<%= name %>">
-	<input type= "submit">
+	<input type= "submit"-->
+
+    <button name= "continue" type = "submit" value="Y">YES</button>
+    <button name= "continue" type = "submit" value="N">NO</button>
+
+
 </form> 
 </center>
 
