--- a/views/correct_guess.erb
+++ b/views/correct_guess.erb
@@ -1,4 +1,4 @@
-
+<body style= "background-color: #c2c2a3;">
 <center>
  "<em>Congratulations!"</em> <br>
  "Your guess of:<strong> <%=guess%> </strong>was correct!"
@@ -17,9 +17,6 @@ style="height:20rem; width:30rem; border: 8px solid #4682b4;"/></center>
   <input type="radio" name="input_playchoice" value="N"> NO<br>
  </form> -->
 
-<p><b>Note:</b> This game was created by:Lyle Sanders and Don Kingery<br>Collaboration was 
-recieved from: (Lotfi Bechouck, John Carr and Ysabelle Bombardier)<br>
-Directed and Supervised by:<a href="http://www.minedminds.org/">Mined Minds</a> </p>
 
 <form playchoice = "playchoice_form" class = "button" method = "post" action = "/playchoice">
 <!--form playchoice = action="action_page.php" method ="get"/playchoice">
@@ -29,9 +26,13 @@ Directed and Supervised by:<a href="http://www.minedminds.org/">Mined Minds</a> 
 
     <button name= "continue" type = "submit" value="Y">YES</button>
     <button name= "continue" type = "submit" value="N">NO</button>
-
-
 </form> 
+
+<p><b>Note:</b> This game was created by:Lyle Sanders and Don Kingery<br>Collaboration was 
+recieved from: (Lotfi Bechouck, John Carr and Ysabelle Bombardier)<br>
+Directed and Supervised by:<a href="http://www.minedminds.org/">Mined Minds</a> </p>
+
 </center>
+</body>
 
 
