--- a/views/get_name.erb
+++ b/views/get_name.erb
@@ -1,11 +1,14 @@
+
+<body style= "background-color: #c2c2a3;">
+
 <center>
 <strong>Welcome, to the <em>"GUESS NUMBER GAME"</em>, please enter your name.
-</strong> </center>
+</strong> </center><br>
 
 
 
 <center><img src="/img/10.jpg"; 
-style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center>
+style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center><br>
 
 
 
@@ -15,3 +18,4 @@ style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center>
     <input type = "submit">
 </form>
 </center>
+</body>
