--- a/views/play_again.erb
+++ b/views/play_again.erb
@@ -1,3 +1,5 @@
+<body style= "background-color: #c2c2a3;">
+
 <center><strong> "Congratulations <%=name%> your guess, <%=guess%> was <em>correct</em>" </strong></center>
 <center>
 "Do you want to play again? Y/N"
@@ -15,3 +17,5 @@ style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center>
 </form>
 
 </center>
+
+</body>
