--- a/views/sorry.erb
+++ b/views/sorry.erb
@@ -1,3 +1,5 @@
+<body style= "background-color: #c2c2a3;">
+
 <center>Sorry <%=name%>, you have used all of your guesses. The number was <%= target%>.</center>
 <br><br>
 
@@ -19,3 +21,4 @@ style="height:15rem; width:25rem; border: 8px solid #4682b4;"/></center>
 </form>
 
 </center>
+</body>
