--- a/views/thank_you.erb
+++ b/views/thank_you.erb
@@ -1,3 +1,5 @@
+<body style= "background-color: #c2c2a3;">
+
 <center><em> "<%=name%> That was fun!</em><br>
 
 "Come back and visit us again!"
@@ -6,4 +8,4 @@
 <center><img src="/img/thankyou.jpg"; 
 style="height:20rem; width:30rem;border: 8px solid #4682b4;"/></center>
 
- 
+ </body>
